2010-08-12 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node_impl_util.h
	(openvrml::node_impl_util::ptr_to_polymorphic_mem): deref will
	never throw; use OPENVRML_NOTHROW.

2010-08-12 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.h: Doesn't need to include
	<boost/thread.hpp>.

2010-08-12 Braden McDaniel  <braden@endoframe.com>

	Updates for Doxygen 1.7.1.

	* doc/Doxyfile
	* doc/Makefile.am
	* doc/doxygen-header
	* doc/manual/tab_l-openvrml.png: Removed.
	* doc/manual/tab_b-openvrml.png: Removed.
	* doc/manual/tab_r-openvrml.png: Removed.

2010-08-07 Braden McDaniel  <braden@endoframe.com>

	Doc-comment improvements.

	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node_impl_util.cpp

2010-08-01 Braden McDaniel  <braden@endoframe.com>

	* README: Removed obsolete reference to OPENVRML_FT_CONST.

2010-08-01 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node_impl_util.cpp: Added doc-comments
	for OPENVRML_NODE_IMPL_UTIL_DEFINE_DO_CREATE_TYPE and supporting
	macros.

2010-07-12 Braden McDaniel  <braden@endoframe.com>

	* src/node/vrml/text.cpp
	(openvrml_node_vrml97::text_metatype::text_metatype(openvrml::browser&):
	Only call FcInit for non-Windows platforms.

2010-07-10 Braden McDaniel  <braden@endoframe.com>

	* src/node/vrml97/text.cpp: Fixed to compile without
	OPENVRML_ENABLE_RENDER_TEXT_NODE.

2010-07-09 Braden McDaniel  <braden@endoframe.com>

	Removed OPENVRML_API from event listener/emitter class templates.

	These trigger "inconsistent dll linkage" warnings from the
	Microsoft compiler.  For gcc's purposes, forcing symbol visibility
	for templates should be unnecessary.

	* src/libopenvrml/openvrml/event.h
	(field_value_listener): Removed OPENVRML_API.
	(field_value_emitter): Removed OPENVRML_API.

2010-07-09 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/local/parse_vrml.h
	(openvrml::local::x3d_vrml_parse_actions::on_mfdouble): Added